<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewThing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num_one">Number One</string>
    <string name="num_two">Number Two</string>
    <string name="result">Result</string>
    <string name="increase">Increament</string>
    <string name="decrease">Decreament</string>
    <string name="notice">Notice</string>
    <string name="country">Country</string>
    <string name="display">Display</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="show">Show Password</string>
    <string name="toast">Toast</string>
    <string name="back">Back</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="subtract">subtract</string>
    <string name="title_activity_add_page">AddPage</string>
    <string name="title_activity_subtract_page">SubtractPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_counter_page">CounterPage</string>
    <string name="title_activity_notification_page">NotificationPage</string>
    <string name="title_activity_spinner_page">SpinnerPage</string>

</resources>
